# Theory-of-Indefiniteness.

./: README.md  gtmo_axioms.py  gtmo_axioms_v2.py  gtmo_core_v2.py  gtmo_interop_v3.py  pyproject.toml  requirements.txt  topology.py  utils.py
Examples/: 01_basic_gtmo_usage.py  example_classification.py  example_epistemic_particles.py  example_trajectories.py  uncertainty_solution_demo.py
docs/: EpistemicParticles_theory.md  GTMØ Enhanced Topological Classification System.md  GTMØ Steering Vectors for Large Language Models.md  axioms.md  core_gtmo.md  epistemic_particles_optimized_docs.md  gtmo-core-v2-docs.md  gtmo_axioms.md  gtmo_axioms_v2_docs.md  gtmo_interop_v3_docs.md  sanb5_documentation.md  theory.md  topology_v2_optimized_docs.md  usage.md  utils_v2_documentation.md
docs/GTMO Fractal Geometry/: GTMO Fractal Geometry Theory.md  gtmo-fractal-theory-pl.md
gtmo/: __init__.py  classification.py  core.py  epistemic_particles.py  epistemic_particles_optimized.py  gtmo-core-v2.py  gtmo_axioms.py  gtmo_axioms_v2.py  gtmo_core_v2.py  gtmo_core_ver3.py  gtmo_ecosystem_documentation.md  gtmo_interop_v2.py  gtmo_interop_v3.py  gtmo_sanb_logic.py  gtmo_sanb_logic_enhanced.py  gtmo_steering_vectors.py  gtmo_topological_classifier_enhanced.py  gtmo_v11_self_modifying.py  topology.py  topology_v2_optimized.py  utils.py
gtmo/gtmo_algorithms/: AX0 Algorithms.py  (+6 more)
tests/: test-gtmo-core-v2.py  test_gtmo_axioms_AX0.py  test_gtmo_axioms_v2.py  test_gtmo_system_full.py  tests_core.py  tests_epistemic_particles.py  tests_gtmo_axioms.py  tests_topology.py  tests_utils.py
(+13 files in other folders)
